📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -9238,5 +9238,125 @@
         "published": "Thu, 11 Dec 2025 20:58:05 GMT",
         "source": "Latest news",
         "summary": "From work-related conversations on our desktops by day to\u00a0personal advice on our phones after hours, AI now integrates 'into the full texture of human life,' a Microsoft study finds."
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/11/1x-struck-a-deal-to-send-its-home-humanoids-to-factories-and-warehouses/",
+        "title": "1X\u00a0struck a deal to send its \u2018home\u2019 humanoids to\u00a0factories and warehouses",
+        "link": "https://techcrunch.com/2025/12/11/1x-struck-a-deal-to-send-its-home-humanoids-to-factories-and-warehouses/",
+        "published": "Thu, 11 Dec 2025 22:03:36 +0000",
+        "source": "TechCrunch",
+        "summary": "Despite launching as a humanoid robot designed to help consumers around the house, 1X's NEO robots are heading to industrial use cases."
+    },
+    {
+        "id": "https://www.theverge.com/22163811/best-phone",
+        "title": "The best phone to buy right now",
+        "link": "https://www.theverge.com/22163811/best-phone",
+        "published": "2025-12-11T17:00:00-05:00",
+        "source": "The Verge",
+        "summary": "Haven\u2019t you heard? Phones are boring now. And that\u2019s just fine! Most people buying a new phone just want something familiar that works better than the device they\u2019re replacing. If that\u2019s your MO, then you\u2019re sure to find something reliable in my recommendations below. But even if you\u2019re looking for something a little more extra, [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/news/842848/new-york-law-ai-advertisements-sag-aftra-labor",
+        "title": "New York&#8217;s new law forces advertisers to say when they&#8217;re using AI avatars",
+        "link": "https://www.theverge.com/news/842848/new-york-law-ai-advertisements-sag-aftra-labor",
+        "published": "2025-12-11T16:30:15-05:00",
+        "source": "The Verge",
+        "summary": "New York Gov. Kathy Hochul signed a bill Thursday that will require advertisers to identify if an ad includes AI-generated people. Hochul's announcement said the bill, S.8420-A/A.8887-B, was the first of its kind in the US, describing it as a \"common sense\" law that would bring increased transparency and protect consumers. A separate bill also [&#8230;]"
+    },
+    {
+        "id": "https://arstechnica.com/information-technology/2025/12/openai-releases-gpt-5-2-after-code-red-google-threat-alert/",
+        "title": "OpenAI releases GPT-5.2 after \u201ccode red\u201d Google threat alert",
+        "link": "https://arstechnica.com/information-technology/2025/12/openai-releases-gpt-5-2-after-code-red-google-threat-alert/",
+        "published": "Thu, 11 Dec 2025 21:27:18 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "Company claims new AI model tops Gemini and matches humans on 70% of work tasks."
+    },
+    {
+        "id": "https://arstechnica.com/culture/2025/12/milly-alcock-is-out-for-revenge-in-supergirl-teaser/",
+        "title": "Supergirl teaser gives us a likably imperfect Kara Zor-El",
+        "link": "https://arstechnica.com/culture/2025/12/milly-alcock-is-out-for-revenge-in-supergirl-teaser/",
+        "published": "Thu, 11 Dec 2025 20:25:08 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "Director Craig Gillespie's film is the second in the new DCU's \"Gods and Monsters\" chapter."
+    },
+    {
+        "id": "https://www.engadget.com/ai/amazons-ai-generated-recap-tool-didnt-watch-fallout-very-closely-215712958.html?src=rss",
+        "title": "Amazon's AI-generated recap tool didn't watch Fallout very closely",
+        "link": "https://www.engadget.com/ai/amazons-ai-generated-recap-tool-didnt-watch-fallout-very-closely-215712958.html?src=rss",
+        "published": "Thu, 11 Dec 2025 21:57:12 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Amazon's plan to offer <a class=\"link\" href=\"https://www.engadget.com/entertainment/streaming/amazon-adds-ai-generated-video-recaps-for-select-prime-video-shows-190758346.html\" target=\"_blank\">AI-generated recaps</a> of Prime Video shows isn't off to a great start. The company's recap of the first season of <a class=\"link\" href=\"https://www.engadget.com/the-fallout-tv-series-is-a-very-awesome-tv-show-130039789.html\" target=\"_blank\"><em>Fallout</em></a> features multiple errors, <a class=\"link"
+    },
+    {
+        "id": "https://www.engadget.com/ai/disneys-deal-with-openai-is-about-controlling-the-future-of-copyright-213009504.html?src=rss",
+        "title": "Disney's deal with OpenAI is about controlling the future of copyright",
+        "link": "https://www.engadget.com/ai/disneys-deal-with-openai-is-about-controlling-the-future-of-copyright-213009504.html?src=rss",
+        "published": "Thu, 11 Dec 2025 21:30:09 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>This morning Disney and OpenAI announced a <a class=\"link\" href=\"https://openai.com/index/disney-sora-agreement/\" target=\"_blank\">three-year</a> licensing agreement: Starting in 2026, ChatGPT and Sora can generate images and videos incorporating Disney IP, including more than 200 characters from the company's stable of Star Wars, Pixar and Marvel brands. To say these companies make for strange bedfellows is an understatement.&nbsp;&nbsp;</p><p>The agreement brings together two parties with ve"
+    },
+    {
+        "id": "https://gizmodo.com/software-mogul-secretary-of-checks-notes-the-interior-says-ai-will-cure-cancer-2000698612",
+        "title": "Software Mogul/Secretary of (*checks notes) the Interior Says AI Will Cure Cancer",
+        "link": "https://gizmodo.com/software-mogul-secretary-of-checks-notes-the-interior-says-ai-will-cure-cancer-2000698612",
+        "published": "Thu, 11 Dec 2025 21:40:26 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"Doug Burgum, US secretary of the interior, in the Oval Office of the White House in Washington, DC, US, on Monday, Oct. 6, 2025.\" class=\"attachment-full size-full wp-post-image\" height=\"1280\" src=\"https://gizmodo.com/app/uploads/2025/12/doug-burgum.jpg\" width=\"1920\" /><br /><br />\"This is the miracle of AI. We can actually manufacture intelligence.\""
+    },
+    {
+        "id": "https://gizmodo.com/atmospheric-river-that-drenched-the-northwest-is-now-supercharging-2-winter-storms-2000698742",
+        "title": "Atmospheric River That Drenched the Northwest Is Now Supercharging 2 Winter Storms",
+        "link": "https://gizmodo.com/atmospheric-river-that-drenched-the-northwest-is-now-supercharging-2-winter-storms-2000698742",
+        "published": "Thu, 11 Dec 2025 21:30:45 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"A NOAA GOES-West satellite image of an atmospheric river affecting the Pacific Northwest on December 11, 2025\" class=\"attachment-full size-full wp-post-image\" height=\"1280\" src=\"https://gizmodo.com/app/uploads/2025/12/atmospheric-river.jpg\" width=\"1920\" /><br /><br />The moisture from this storm system will help two fast-moving winter storms spread snow across the eastern U.S., with another atmospheric river on its way."
+    },
+    {
+        "id": "https://mashable.com/video/ai-chatbot-psa",
+        "title": "PSA imagines AI chatbots as creepy humans who harm kids",
+        "link": "https://mashable.com/video/ai-chatbot-psa",
+        "published": "Thu, 11 Dec 2025 21:53:43 +0000",
+        "source": "Mashable",
+        "summary": "President Trump says he won't let states pass AI laws. This ad says they're necessary."
+    },
+    {
+        "id": "https://mashable.com/article/disney-cease-and-desist-google-ai",
+        "title": "After striking OpenAI deal, Disney demands Google cease and desist from AI infringement",
+        "link": "https://mashable.com/article/disney-cease-and-desist-google-ai",
+        "published": "Thu, 11 Dec 2025 21:52:24 +0000",
+        "source": "Mashable",
+        "summary": "Disney has sent a legal threat to Google, telling the company to stop using its characters in its AI models."
+    },
+    {
+        "id": "https://mashable.com/article/why-is-heated-rivalry-show-hbo-max-so-hot",
+        "title": "Why is the sex in Heated Rivalry so hot?",
+        "link": "https://mashable.com/article/why-is-heated-rivalry-show-hbo-max-so-hot",
+        "published": "Thu, 11 Dec 2025 21:52:08 +0000",
+        "source": "Mashable",
+        "summary": "Queer sex never looked better than it does in HBO Max's hit 'Heated Rivalry.'"
+    },
+    {
+        "id": "https://www.zdnet.com/article/new-openai-gpt-5-2-how-to-try-it/",
+        "title": "Are GPT-5.2's new powers enough to surpass Gemini 3? Try it and see",
+        "link": "https://www.zdnet.com/article/new-openai-gpt-5-2-how-to-try-it/",
+        "published": "Thu, 11 Dec 2025 21:15:00 GMT",
+        "source": "Latest news",
+        "summary": "The new model performs 'at or above a human expert level,' according to OpenAI."
+    },
+    {
+        "id": "https://react.dev/blog/2025/12/11/denial-of-service-and-source-code-exposure-in-react-server-components",
+        "title": "Denial of service and source code exposure in React Server Components",
+        "link": "https://react.dev/blog/2025/12/11/denial-of-service-and-source-code-exposure-in-react-server-components",
+        "published": "Thu, 11 Dec 2025 20:46:46 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46236924\">Comments</a>"
+    },
+    {
+        "id": "https://alecmuffett.com/article/134925",
+        "title": "UK House of Lords attempting to ban use of VPNs by anyone under 16",
+        "link": "https://alecmuffett.com/article/134925",
+        "published": "Thu, 11 Dec 2025 20:32:22 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46236738\">Comments</a>"
     }
 ]
