📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -9358,5 +9358,85 @@
         "published": "Thu, 11 Dec 2025 20:32:22 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46236738\">Comments</a>"
+    },
+    {
+        "id": "https://www.theverge.com/ai-artificial-intelligence/842992/disney-openai-sora-ai-slop-partnership",
+        "title": "Disney wants to drag you into the slop",
+        "link": "https://www.theverge.com/ai-artificial-intelligence/842992/disney-openai-sora-ai-slop-partnership",
+        "published": "2025-12-11T18:03:24-05:00",
+        "source": "The Verge",
+        "summary": "Disney and OpenAI's new $1 billion partnership feels emblematic of the terrible times we're living through. In exchange for access to the generative AI firm's APIs and tools like ChatGPT, the studio plans to let users of OpenAI's Sora AI video generator create clips featuring hundreds of Disney-owned characters. Sora AI users will be able [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/21309820/best-wireless-earbuds",
+        "title": "The best earbuds we\u2019ve tested for 2025",
+        "link": "https://www.theverge.com/21309820/best-wireless-earbuds",
+        "published": "2025-12-11T18:00:00-05:00",
+        "source": "The Verge",
+        "summary": "It\u2019s hard to buy a bad pair of wireless earbuds these days, and with constant discounts and deals wherever you look, now is as good a time as any to splurge on the pair you\u2019ve been eyeing. The market has come a long way since the early era of true wireless earbuds, when we had [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/news/842987/google-gemini-chrome-ios",
+        "title": "Google brings Gemini\u2019s Chrome integration to iPhone and iPad",
+        "link": "https://www.theverge.com/news/842987/google-gemini-chrome-ios",
+        "published": "2025-12-11T17:51:27-05:00",
+        "source": "The Verge",
+        "summary": "Built-in Gemini AI features in Chrome are now becoming more widely available on the iOS version of Google's browser, as reported by 9to5Google and Engadget. They're popping up several months after the features' rollout on the desktop version started in September. Once the new Gemini features are active on your iPhone or iPad, Chrome users [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/policy/842993/kids-online-safety-markup-energy-commerce-tim-cook-apple",
+        "title": "Tim Cook\u2019s lobbying hangs over a key kids online safety vote",
+        "link": "https://www.theverge.com/policy/842993/kids-online-safety-markup-energy-commerce-tim-cook-apple",
+        "published": "2025-12-11T17:50:24-05:00",
+        "source": "The Verge",
+        "summary": "At a congressional meeting to vote on the future of kids online safety, the most spirited debate of the day was about a bill that wasn't even on the agenda and Apple CEO Tim Cook. 18 bills that aim to regulate the internet to protect children are now headed for a vote before the full [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/news/842978/amazon-prime-video-ai-fallout-recap",
+        "title": "Amazon Prime Video pulls AI-powered recaps after Fallout flub",
+        "link": "https://www.theverge.com/news/842978/amazon-prime-video-ai-fallout-recap",
+        "published": "2025-12-11T17:46:11-05:00",
+        "source": "The Verge",
+        "summary": "Amazon Prime Video has pulled its AI-powered video recap of Fallout after viewers noticed that it got key parts of the story wrong. The streaming service began testing Video Recaps last month, and now they're missing from the shows included in the test, including Fallout, The Rig, Tom Clancy's Jack Ryan, Upload, and Bosch. The [&#8230;]"
+    },
+    {
+        "id": "https://www.wired.com/story/do-kwon-terraform-sentenced-prison-crypto-fraud/",
+        "title": "Crypto Magnate Do Kwon Sentenced to 15 Years in Prison",
+        "link": "https://www.wired.com/story/do-kwon-terraform-sentenced-prison-crypto-fraud/",
+        "published": "Thu, 11 Dec 2025 22:19:59 +0000",
+        "source": "WIRED",
+        "summary": "The founder of Terraform Labs was sentenced today for lying about \u201cexperimental\u201d coins that blew a $40 billion hole in the crypto economy."
+    },
+    {
+        "id": "https://www.wired.com/story/warnings-mount-in-congress-over-expanded-us-wiretap-powers/",
+        "title": "Warnings Mount in Congress Over Expanded US Wiretap Powers",
+        "link": "https://www.wired.com/story/warnings-mount-in-congress-over-expanded-us-wiretap-powers/",
+        "published": "Thu, 11 Dec 2025 22:15:56 +0000",
+        "source": "WIRED",
+        "summary": "Experts tell US lawmakers that a crucial spy program\u2019s safeguards are failing, allowing intel agencies deeper, unconstrained access to Americans\u2019 data."
+    },
+    {
+        "id": "https://www.wired.com/story/rfk-jrs-health-department-is-pondering-a-national-mens-health-initiative/",
+        "title": "RFK Jr.\u2019s Health Department Is Pondering a National Men\u2019s Health Initiative",
+        "link": "https://www.wired.com/story/rfk-jrs-health-department-is-pondering-a-national-mens-health-initiative/",
+        "published": "Thu, 11 Dec 2025 22:11:31 +0000",
+        "source": "WIRED",
+        "summary": "At an FDA discussion of testosterone replacement therapy, a top official called for special health centers to address a \u201cmen\u2019s health crisis.\u201d Others called to ease men\u2019s access to hormones."
+    },
+    {
+        "id": "https://gizmodo.com/doctor-who-2025-retrospective-disney-bbc-2000698641",
+        "title": "\u2018Doctor Who\u2019 and the Disintegration of 2025",
+        "link": "https://gizmodo.com/doctor-who-2025-retrospective-disney-bbc-2000698641",
+        "published": "Thu, 11 Dec 2025 22:45:08 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"Doctor Who 2025 Retrospective\" class=\"attachment-full size-full wp-post-image\" height=\"1280\" src=\"https://gizmodo.com/app/uploads/2025/12/doctor-who-2025-retrospective.jpg\" width=\"1920\" /><br /><br />2025 should've been a banner year for 'Doctor Who,' but instead it almost became one of its darkest hours."
+    },
+    {
+        "id": "https://jon.recoil.org/blog/2025/12/an-svg-is-all-you-need.html",
+        "title": "An SVG is all you need",
+        "link": "https://jon.recoil.org/blog/2025/12/an-svg-is-all-you-need.html",
+        "published": "Thu, 11 Dec 2025 19:25:14 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46235959\">Comments</a>"
     }
 ]
