📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -9438,5 +9438,101 @@
         "published": "Thu, 11 Dec 2025 19:25:14 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46235959\">Comments</a>"
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/11/google-launched-its-deepest-ai-research-agent-yet-on-the-same-day-openai-dropped-gpt-5-2/",
+        "title": "Google launched its deepest AI research agent yet \u2014 on the same day OpenAI dropped GPT-5.2",
+        "link": "https://techcrunch.com/2025/12/11/google-launched-its-deepest-ai-research-agent-yet-on-the-same-day-openai-dropped-gpt-5-2/",
+        "published": "Fri, 12 Dec 2025 00:18:56 +0000",
+        "source": "TechCrunch",
+        "summary": "For the first time, developers can embed Google's Deep Research tool, based on Gemini 3 Pro, into their own apps."
+    },
+    {
+        "id": "https://www.theverge.com/tech/791574/best-switch-2-controllers",
+        "title": "I\u2019ve tested the latest Switch 2 controllers, and this one is the best",
+        "link": "https://www.theverge.com/tech/791574/best-switch-2-controllers",
+        "published": "2025-12-11T19:30:00-05:00",
+        "source": "The Verge",
+        "summary": "If you choose to get an extra controller for your Nintendo Switch 2, you can spend a lot \u2014 and get a lot in return. Buying Nintendo\u2019s own $89.99 Switch 2 Pro Controller, for instance, will net you the console\u2019s only wireless controller with a 3.5mm headphone jack for private listening, not to mention great-feeling [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/games/841973/the-game-awards-2025-annoucements-news-trailers",
+        "title": "The Game Awards 2025: all the news and announcements",
+        "link": "https://www.theverge.com/games/841973/the-game-awards-2025-annoucements-news-trailers",
+        "published": "2025-12-11T19:30:00-05:00",
+        "source": "The Verge",
+        "summary": "The Game Awards are back once again to showcase a metric ton of commercials, provide the gaming public with their monthly dose of Muppets, and validate gamers&#8217; opinions on which title should be named the Game of the Year. I don&#8217;t wanna say it&#8217;s a foregone conclusion what this year&#8217;s GOTY will be \u2014 Silksong [&#8230;]"
+    },
+    {
+        "id": "https://arstechnica.com/ai/2025/12/with-gwm-1-family-of-world-models-runway-shows-ambitions-beyond-hollywood/",
+        "title": "With GWM-1 family of \u201cworld models,\u201d Runway shows ambitions beyond Hollywood",
+        "link": "https://arstechnica.com/ai/2025/12/with-gwm-1-family-of-world-models-runway-shows-ambitions-beyond-hollywood/",
+        "published": "Thu, 11 Dec 2025 23:47:33 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "Runway joins a competitive field alongside Google, Nvidia, and others."
+    },
+    {
+        "id": "https://arstechnica.com/gaming/2025/12/instead-of-fixing-wows-new-floating-house-exploit-blizzard-makes-it-official/",
+        "title": "Instead of fixing WoW\u2019s new floating house exploit, Blizzard makes it official",
+        "link": "https://arstechnica.com/gaming/2025/12/instead-of-fixing-wows-new-floating-house-exploit-blizzard-makes-it-official/",
+        "published": "Thu, 11 Dec 2025 23:03:02 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "\"We all kinda immediately agreed this was way too cool to change.\""
+    },
+    {
+        "id": "https://www.engadget.com/big-tech/apple-mostly-loses-its-appeal-in-epic-games-case-235509557.html?src=rss",
+        "title": "Apple (mostly) loses its appeal in Epic Games case",
+        "link": "https://www.engadget.com/big-tech/apple-mostly-loses-its-appeal-in-epic-games-case-235509557.html?src=rss",
+        "published": "Thu, 11 Dec 2025 23:55:09 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Apple has clawed back a bit of ground in its legal fight with Epic Games that could have wide-reaching consequences for all app developers. Today, the 9th U.S. Circuit Court of Appeals mostly <a class=\"link\" href=\"https://cdn.ca9.uscourts.gov/datastore/opinions/2025/12/11/25-2935.pdf\" target=\"_blank\">upheld</a> a previous contempt ruling regarding fees Apple levied on third-party payment systems. However, the judges did decide to reverse the order that Apple cannot charge any commissions on t"
+    },
+    {
+        "id": "https://mashable.com/article/dec-11-tcl-t7-4k-qled-tv-deal",
+        "title": "Bring home this 65-inch TCL 4K QLED TV for its lowest price yet",
+        "link": "https://mashable.com/article/dec-11-tcl-t7-4k-qled-tv-deal",
+        "published": "Fri, 12 Dec 2025 00:00:00 +0000",
+        "source": "Mashable",
+        "summary": "As of Dec. 11, get the 65-inch TCL 4K QLED TV for its lowest price yet."
+    },
+    {
+        "id": "https://mashable.com/article/the-game-awards-2025-news-updates-live",
+        "title": "The Game Awards 2025: Biggest announcements, surprises, and live updates",
+        "link": "https://mashable.com/article/the-game-awards-2025-news-updates-live",
+        "published": "Thu, 11 Dec 2025 23:36:52 +0000",
+        "source": "Mashable",
+        "summary": "The Game Awards 2025 take place on Dec. 11, and in addition to the game of the year, we're also expecting news on the hottest titles of 2026."
+    },
+    {
+        "id": "https://mashable.com/article/disney-openai-bob-iger-says-deal-is-not-threat-to-creators-at-all",
+        "title": "Everything is fine: Disney CEO Bob Iger says OpenAI deal isnt a threat to creatives.",
+        "link": "https://mashable.com/article/disney-openai-bob-iger-says-deal-is-not-threat-to-creators-at-all",
+        "published": "Thu, 11 Dec 2025 23:33:38 +0000",
+        "source": "Mashable",
+        "summary": "After announcing a $1 billion deal with OpenAI, Disney CEO Bob Iger took to CNBC to defend the investment."
+    },
+    {
+        "id": "https://mashable.com/article/dec-11-tcl-nxtpaper-11-plus-deal",
+        "title": "The TCL NXTPAPER 11 Plus tablet is back down to a record low price of under $240",
+        "link": "https://mashable.com/article/dec-11-tcl-nxtpaper-11-plus-deal",
+        "published": "Thu, 11 Dec 2025 23:00:00 +0000",
+        "source": "Mashable",
+        "summary": "The TCL NXTPAPER 11 Plus Android tablet is on sale at Amazon for $239.99, down from the list price of $369.99. That's a 35% discount."
+    },
+    {
+        "id": "https://mashable.com/article/dec-11-pdf-converter-pro-lifetime-license",
+        "title": "Turn PDF headaches into hassle-free workflows with this $24 tool",
+        "link": "https://mashable.com/article/dec-11-pdf-converter-pro-lifetime-license",
+        "published": "Thu, 11 Dec 2025 23:00:00 +0000",
+        "source": "Mashable",
+        "summary": "Make peace with PDFs with this lifetime subscription to PDF Converter and Editor, now just $23.99 (reg. $99.99) with code CONVERT through Jan. 11."
+    },
+    {
+        "id": "https://yaky.dev/2025-12-11-nokia-n900-necromancy/",
+        "title": "Nokia N900 Necromancy \u2013 giving a new life to a classic Linux smartphone",
+        "link": "https://yaky.dev/2025-12-11-nokia-n900-necromancy/",
+        "published": "Fri, 12 Dec 2025 00:04:29 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46239177\">Comments</a>"
     }
 ]
